[BACKUP] Pre-UI overhaul checkpoint - XY pad ring visualization
Current state backup before implementing new UI mockup features:
- Radial XY pad with glowing center gradient
- Segmented ring glow per processor quadrant
- Elliptical deformation toward active processors
- Corner indicators with mute state feedback
- Dot halo pulsing tied to total GR

This checkpoint preserves:
- STEVEScope oscilloscope component
- Current plugin editor state
- All DSP processing parameters
- Commercial release UI improvements

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -22,6 +22,7 @@ target_sources(STEVE
         StereoMeter.cpp
         ThresholdMeter.cpp
         WaveformGRMeter.cpp
+        STEVEScope.cpp
 )
 
 # Link JUCE modules
